swc/frontend/swc-frontend-net-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: swc-frontend-net-policy
  namespace: swc-app
spec:
  podSelector:
    matchLabels:
      role: frontend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: swc-app
    - podSelector:
        matchLabels:
          role: api
